# pam-imap

./: .gitignore  BUGS  CHANGES  CREDITS  Makefile.in  README.original  README.rst  TODO  bootstrap  check_user.c  config.h.in  configure.in  pam_imap.c  pam_imap.spec  parseconf.c  parseconf.h
conf/: check_user  imap-auth  login.example  pam_imap.conf  smtp.example
debian/: changelog  control  copyright  libpam-imap.docs  rules
isynclib/: Makefile.in  config.c  config.h  cram.c  helpers.c  imap.c  imaptest.c  isync.h  isyncrc  list.c
